feature - Support Json/Single-Page-Applications
Reset Password, passwordless login, and confirmation did not support SPA/json since
those three had confirmation links that only returned redirects or forms. SPAs need to get control
of all redirects and have the appropriate context. Three new 'views' are available:
RESET_VIEW, RESET_ERROR_VIEW, and LOGIN_ERROR_VIEW to enable easy routing within the UI.

This change introduces a new config variable - SECURITY_REDIRECT_BEHAVIOR which will change those redirects to SPA-friendly
redirects. A new overridable UserMixin method - get_redirect_qparams allows for customizing precisely what
query arguments are sent via the redirect.
By default of course the existing form-based redirects are done.

A new configuration variable - REDIRECT_HOST can be used during development to force redirects to a different netloc
useful when the UI is running separately (e.g. via npm).

Continued to improve the openapi.yaml file to document these changes

Improved unit tests by:
1) verifying 'flashes' - for json/SPA - we don't want any.
2) improve performance by not using bcrypt for login tokens during testing.
